# starwars_ros

./: Lab_eval_Q&A_Singaram.doc
src/star_wars/: CMakeLists.txt  config.rviz  mail_status.py  package.xml
src/star_wars/launch/: spawn.launch  star_wars_task1.launch  star_wars_task2.launch
src/star_wars/src/: controller_1_node.cpp  controller_2_node.cpp  sim
src/star_wars/urdf/: bb8.xacro  r2d2.urdf
